<resources>
    <string name="app_name">Hub2Switch</string>

    <string name="bienvenue">Bienvenue</string>
    <!--ressources string -> layout_liste_client -->
    <string name="client_name">Jhonny Matériel</string>
    <string name="cpt_client">Contacts 20</string>
    <string name="cpt_materiel">Materiel 150</string>

    <!--ressources string -> layout_fiche_client -->
    <string name="text_adresse">Adresse</string>
    <string name="text_Nom_Adresse">Pierre Coudert</string>
    <string name="text_Rue_Adresse">28, boulevard Albin Durand</string>
    <string name="text_Code_Post_Adresse">51000 CHÂLONS-EN-CHAMPAGNE</string>
    <string name="text_Mail">Mail</string>
    <string name="text_Adresse_Mail">pierre.coudert@gmail.com</string>
    <string name="text_Tel">Téléphone</string>
    <string name="text_Num_Tel">06 58 23 02 01</string>
    <string name="button_Contact">Contact</string>
    <string name="button_Materiel">Materiel</string>


    <!--ressources string -> layout_ajout_materiel -->
    <!--<string name="nom_materiel">Nom materiel</string>-->
    <!--<string name="num_serie">Numéro série</string>-->
    <!--<string name="date_achat">Date achat</string>-->

    <string name="layout_ajout_client">Ajouter un Client</string>
    <string name="layout_ajout_contact">Ajouter un Contact</string>
    <string name="layout_ajout_materiel">Ajouter du materiel</string>
    <string name="layout_fiche_client">Fiche du client</string>
    <string name="layout_liste_client">Liste des clients</string>
    <string name="layout_liste_contact">Liste des contacts</string>
    <string name="layout_liste_materiel">Liste du materiel</string>
    <string name="ouvrir">Ouvrir</string>

    <!--layout_liste_contact-->
    <string name="contact_name">Robert Ford Informatique</string>
    <string name="numero_rue_contact">46</string>
    <string name="rue_contact">rue La Boétie</string>
    <string name="code_post_contact">75016</string>
    <string name="ville_contact">PARIS</string>
    <string name="numero_tel_contact">06 58 75 62 54</string>
    <string name="mail_contact">robert.ford@orange.fr</string>

    <string-array name="spinnerMateriel">
        <item>Tout</item>
        <item>Imprimante</item>
        <item>Switch</item>
        <item>Routeur</item>
        <item>Serveur</item>
        <item>Ordinateur</item>
    </string-array>

</resources>
