<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/bouton_contact_access"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/ic_android_green_80dp"
            />

        <TextView
            android:id="@+id/contact_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/blackWord"
            android:text="@string/contact_name" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="1dp"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="45dp"
            android:background="@color/separatorColor"></LinearLayout>

        <TextView
            android:id="@+id/numero_rue_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="50dp"
            android:text="@string/numero_rue_contact"
             />
        <TextView
            android:id="@+id/rue_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="50dp"
            android:text="@string/rue_contact"
            />

        <TextView
            android:id="@+id/code_post_contact"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="70dp"
            android:text="@string/code_post_contact"
             />

        <TextView
            android:id="@+id/ville_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="160dp"
            android:layout_marginTop="70dp"
            android:text="@string/ville_contact"
            />
        <TextView
            android:id="@+id/numero_tel_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="90dp"
            android:text="@string/numero_tel_contact"
            />
        <TextView
            android:id="@+id/mail_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="110dp"
            android:layout_marginBottom="5dp"
            android:text="@string/mail_contact"
            />
        <ImageButton
            android:id="@+id/bouton_edit"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginLeft="350dp"
            android:layout_marginTop="70dp"
            app:srcCompat="@drawable/edit"
            android:background="@android:color/transparent"
            />

        <ImageButton
            android:id="@+id/bouton_delete"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginLeft="350dp"
            android:layout_marginTop="100dp"
            app:srcCompat="@drawable/delete"
            android:background="@android:color/transparent"
            />

    </androidx.cardview.widget.CardView>

    <ImageButton
        android:id="@+id/bouton_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="28dp"
        app:srcCompat="@drawable/plus_ajout"
        android:background="@android:color/transparent"/>

</RelativeLayout>